apps/staging/ddia-labs/service-go.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddia-labs-go
  namespace: staging
  labels:
    app: ddia-labs-go
spec:
  type: ClusterIP
  selector:
    app: ddia-labs
  ports:
    - name: go
      port: 8081
      targetPort: go
